# novaframe-engine

./: .gitignore  CLAUDE.md  PLAN-engine-distribution-and-updates.md  PLAN-settings-final-touches.md  PLAN-wallpaper-settings-and-asset-fixes.md  cargo-wrapper.sh  claude_debug_prompt.md  generate_keys.exp  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json  test_objc2_levels.rs
src-tauri/capabilities/: default.json  desktop.json  storefront.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
themes/mercator-classic/: README.md  manifest.json
themes/mercator-classic/shaders/: terminator.frag  terminator.vert
