[package]
name = "novaframe_engine"
version = "0.2.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "novaframe_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Updated to ensure compatibility with recent Rust toolchains
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
# Launch the engine on OS login so the wallpaper persists across reboots.
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Desktop underlay for wallpaper anchoring
tauri-plugin-desktop-underlay = "0.2.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-deep-link = "2.4.9"
urlencoding = "2.1.3"
reqwest = { version = "0.13.4", features = ["stream"] }
zip = "8.6.0"
# Stable per-machine identifier for DRM device locking
machine-uid = "0.5"
# Relaunch support for the auto-updater ("Restart to update")
tauri-plugin-process = "2"
# On Windows/Linux a deep link launches a brand-new process; this plugin
# forwards the URL to the already-running instance instead (the deep-link
# feature does the forwarding automatically).
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
# SHQueryUserNotificationState — detects a fullscreen game/presentation so the
# wallpaper render can be paused (GPU/battery). Reuses the same windows crate
# version Tauri already pulls in, so no duplicate compilation.
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

